<resources>
    <string name="app_name">GSK MT Orange</string>
    <string name="main_menu_activity_name">GSK Orange Stores</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E Mail</string>
    <string name="prompt_userid">Username/Kullanıcı Adı/اسم المستخدم</string>
    <string name="prompt_password">Password/Şifre/كلمة المرور</string>
    <string name="action_sign_in">Login/Giriş Yap</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save">Save</string>
    <string name="brand">Brand</string>
    <string name="display">Display</string>
    <string name="image">Image</string>
    <string name="gaps">Gaps</string>
    <string name="sku">Sku</string>
    <string name="ref_image">Ref. Image</string>
    <string name="present">Present</string>
    <string name="stock">Stock</string>
    <string name="select">Select</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="brandname">Brand Name</string>
    <string name="skuname">SKU Name</string>
    <string name="quantity">Quantity</string>
    <string name="delete">Delete</string>
    <string name="StoreVisited"> Store Visited</string>
    <string name="GSKMT">GSK MT ORANGE STORE</string>
    <string name="address">C 126, Okhla II,</string>
    <string name="storefront">Click Store Front Image</string>
    <string name="select_language">Please select language</string>
    <string name="title_activity_select_language">Select Language</string>
    <string name="title_activity_store_list">Store List</string>
    <string name="title_activity_store_geotag">Geo Tag</string>
    <string name="menu_daily_route_plan">Daily Route Plan</string>
    <string name="menu_daily_download">Daily Data Download</string>
    <string name="menu_upload_data">Data Uploaded Successfully</string>
    <string name="menu_geotag">Geo Tag</string>
    <string name="menu_export">Data Export</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_services">Services</string>
    <string name="title_activity_t2_pcompliance">Visibility/T2P</string>
    <string name="title_activity_category_list">Category List</string>
    <string name="title_activity_category_wise_performance">Categorywise Performance</string>
    <string name="title_activity_daily_main_menu">Daily Data Menu</string>
    <string name="title_activity_msl__availability">SKU Availability</string>
    <string name="title_activity_stock_facing">Stock and Facing</string>
    <string name="daily_data_menu_msl_availability">SKU Availability</string>
    <string name="daily_data_menu_stock_facing">Stock and Facing</string>
    <string name="daily_data_menu_t2p">Visibility/T2P</string>
    <string name="daily_data_menu_additional_visibility">Additional Visibility</string>
    <string name="daily_data_menu_promo_compliance">Promo Compliance</string>
    <string name="daily_data_menu_competition_tracking">Competition Visibility</string>
    <string name="daily_data_menu_additional_promotions">Competition Promo</string>
    <string name="msl_availability_sku">SKU Name</string>
    <string name="msl_availability_mbq">MBQ</string>
    <string name="msl_availability_availability">Availability</string>
    <string name="stock_facing_reference_image">Reference Image</string>
    <string name="stock_facing_sku_name">SKU Name</string>
    <string name="stock_facing_stock">Stock</string>
    <string name="stock_facing_faceup">Facing</string>
    <string name="stock_facing_sos_target">SOS Target</string>
    <string name="stock_facing_sos">SOS</string>
    <string name="title_geo_tag_activity_upload_data">Store Uploaded</string>
    <string name="title_geo_tag_activity_geo_data">Store Geo Data Uploaded</string>
    <string name="title_geo_tag_activity_geo_already_done">Store Already Geotagged</string>
    <string name="title_store_list_activity_store_already_done">Store Already Uploaded</string>
    <string name="title_store_list_activity_store_data_uploaded">Store Data Uploaded</string>
    <string name="title_store_list_activity_store_already_checkout">Store Already Checkout</string>
    <string name="title_store_list_activity_store_again_uploaded">Please Upload data again</string>
    <string name="title_store_list_activity_store_closed">Store Closed</string>
    <string name="title_store_list_activity_already_store_closed">Store Already Closed</string>
    <string name="title_store_list_checkout_current">Please checkout from current store</string>
    <string name="title_store_list_checkout_Already_filled">Data already filled</string>
    <string name="title_store_list_download_data">Please Download Data First</string>
    <string name="enter_the_values">Enter the values</string>
    <string name="title_activity_upload">Upload Data</string>
    <string name="no_data_for_upload">No Data For Upload</string>
    <string name="first_checkout_store">First checkout of store</string>
    <string name="title_activity_promo_compliance">Promotion Compliance</string>
    <string name="promo_compliance_additional_promo">Additional Promos</string>
    <string name="promo_compliance_promo">Promos</string>
    <string name="promo_compliance_promos_sku">Promos SKU</string>
    <string name="promo_compliance_sku">SKU</string>
    <string name="promo_compliance_inStock">In Stock</string>
    <string name="promo_compliance_promoAnnouncer">Promo Announcer</string>
    <string name="promo_compliance_runningPOS">Running on POS</string>
    <string name="promo_compliance_add">Add</string>
    <string name="category_performance_period">Period</string>
    <string name="category_performance_msl_availability">MSL</string>
    <string name="category_performance_sos">SOS</string>
    <string name="category_performance_t2p">T2P</string>
    <string name="category_performance_promo">Promo</string>
    <string name="category_performance_oss">OSS</string>
    <string name="category_performance_PLANOGRAM">Planogram</string>
    <string name="category_performance_ltm">LTM</string>
    <string name="category_performance_mtd">MTD</string>
    <string name="category_performance_lsv">LSV</string>
    <string name="title_activity_store_wise_performance">Store wise Performance</string>
    <string name="AdditionalDisplay">Is there any Additional Display</string>
    <string name="Display">Display</string>
    <string name="Photo">Photo</string>
    <string name="title_activity_Additional_visibility">Additional Visibility</string>
    <string name="title_activity_Want_save"> Are you sure you want to save</string>
    <string name="title_activity_Want_add"> Please Add Data</string>
    <string name="title_activity_Want_to_add">Are you sure you want to add</string>
    <string name="title_activity_Want_to_delete"> Do You Want To Delete Data</string>
    <string name="store"> store</string>
    <string name="title_activity_Want_to_delete1"> Do You Want To Delete</string>
    <string name="title_activity_click_delete">Click Yes To Delete!</string>
    <string name="title_activity_select_dropdown">Please Select dropdown</string>
    <string name="title_activity_take_image">Please Take a image</string>
    <string name="title_activity_fill_sku">Please fill sku data</string>
    <string name="title_activity_enter_quantity">Please enter Quantity</string>
    <string name="title_activity_save_data">Do you want to save the data</string>
    <string name="clickimage">Please click the image</string>
    <string name="gps">GPS IS DISABLED...</string>
    <string name="gpsebale">Click ok to enable GPS.</string>
    <string name="takeimage"> Please Take Image</string>
    <string name="notsuppoted">This device is not supported.</string>
    <string name="uploaddata">Uploading Data</string>
    <string name="geotagdata">Uploading Geotag Data...</string>
    <string name="failure">failure</string>
    <string name="uploadimge">Uploading Geotag Images</string>
    <string name="success">success</string>
    <string name="wantcheckout">Are you sure you want to Checkout</string>
    <string name="nonetwork"> No Network Connection. Please Check Your Internet Connection</string>
    <string name="title_activity_Non_Work">Non Working Reason</string>
    <string name="closed">Close</string>
    <string name="click_image">Please click image</string>
    <string name="fill_sku_data">Please fill SKU data</string>
    <string name="fill_gaps_data">Please fill GAP data</string>
    <string name="data_will_be_lost">Want to proceed unsaved data will be deleted</string>
    <string name="download_data">Downloading Data</string>
    <string name="store_visited">Store Visited</string>
    <string name="store_image">Click Store Front Image</string>
    <string name="title_activity_store_image">Store Front Image</string>
    <string name="reason">Reason</string>
    <string name="select_reason">Select Reason</string>
    <string name="daily_activity_menu">Daily Data Menu</string>
    <string name="stock_facing_planogram_dialog_title">Reference Image</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="check_save_message">Are you sure you want to save</string>
    <string name="save_message">Data has been saved</string>
    <string name="update_message">Data has been updated</string>
    <string name="empty_field">Fill the value </string>
    <string name="fill_data">Please fill all the data</string>
    <string name="dialog_title">Parinaam</string>
    <string name="select_language_item">Select language</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_checkout">Checkout Activity</string>
    <string name="checkout_successful">Checkout Success</string>
    <string name="NetworkError">Network Error ,</string>
    <string name="DataNot"> Data Not Uploaded ,</string>
    <string name="displayname">Display Name</string>
    <string name="adddatatoclick">Click Yes To Add Data</string>
    <string name="Remark">Remark</string>
    <string name="pleaseenterRemarks">Please fill Remark</string>
    <string name="title_activity_service">Service</string>
    <string name="data_downloaded_successfully">Data downloaded successfully</string>
    <string name="export_database">Export Database</string>
    <string name="data_exported_successfully">Database Exported Successfully</string>
    <string name="databasexported">Database Exported And Uploaded Successfully</string>
    <string name="uploadeddata">Uploaded Data</string>
    <string name="previous_data_upload">Please Upload Previous Data First</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error">Error Uploading</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="create">Create</string>
    <string name="no_of_rows_on_shelf">No. of Rows on Shelf</string>
    <string name="sub_category">Sub Category</string>
    <string name="edit">Edit</string>
    <string name="select_option">Select an option</string>
</resources>