<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_route_plan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_daily_route_plan" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_daily_download" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_upload_data" />
        <item
            android:id="@+id/nav_geotag"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_geotag" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_export" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_exit" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_setting" />
            <item
                android:id="@+id/nav_services"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_services" />
        </menu>
    </item>

</menu>
